--- a/setup.cfg
+++ b/setup.cfg
@@ -24,4 +24,4 @@ packages = find:
 
 [options.entry_points]
 console_scripts =
-    joringels = joringels.__main__:main
+    jo = joringels.__main__:main
