--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = joringels
 include_package_data = True
-version = 0.0.4
+version = 0.1.0
 description = Plugin service that runs your python programs anywhere without install.
 long_description = file: README.md, CHANGELOG.md, LICENSE
 long_description_content_type = text/markdown
@@ -17,7 +17,7 @@ install_requires =
     pycryptodome
     requests
     tabulate
-    psutil
+    psutil<=5.9.1
     ipwhois
     pykeepass
 packages = find:
