--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ tabulate = "*"
 psutil = "*"
 ipwhois = "*"
 joringels = {editable = true, path = "."}
+logunittest = {git = "https://oauth2:glpat-PDn2Nftephd5_mGosn4x@gitlab.com/larsmielke2/logunittest.git"}
 pykeepass = "*"
 
 [dev-packages]
