--- a/Pipfile
+++ b/Pipfile
@@ -11,9 +11,9 @@ requests = "*"
 tabulate = "*"
 psutil = "*"
 ipwhois = "*"
-joringels = {editable = true, path = "."}
-logunittest = {git = "https://oauth2:glpat-PDn2Nftephd5_mGosn4x@gitlab.com/larsmielke2/logunittest.git"}
 pykeepass = "*"
+joringels = {editable = true, path = "."}
+logunittest = {editable = true, path = "/Users/Lars/python_venvs/packages/logunittest"}
 
 [dev-packages]
 
