--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,12 @@
 stages:
   - test
-  - review
-  - deploy
 
 unittest:
+  image: python:3.9
   stage: test
   tags:
         - test
   script:
+    - pip3 install pipenv
     - pipenv install
     - pipenv run python -m unittest
