Pipfile adjust and some prints removed

--- a/Pipfile
+++ b/Pipfile
@@ -13,10 +13,11 @@ psutil = "*"
 ipwhois = "*"
 # joringels installs differ depending on system to install on
 # joringels = {git = "https://oauth2:glpat-PDn2Nftephd5_mGosn4x@gitlab.com/larsmielke2/joringels.git"}
-joringels = {editable = true, path = "."}
+# joringels = {editable = true, path = "."}
+joringels = {path = "."}
 # logunittest installs differ depending on system to install on
-# logunittest = {git = "https://oauth2:glpat-PDn2Nftephd5_mGosn4x@gitlab.com/larsmielke2/logunittest.git"}
-logunittest = {editable = true, path = "/Users/Lars/python_venvs/packages/logunittest"}
+logunittest = {git = "https://oauth2:glpat-PDn2Nftephd5_mGosn4x@gitlab.com/larsmielke2/logunittest.git"}
+# logunittest = {editable = true, path = "/Users/Lars/python_venvs/packages/logunittest"}
 
 [dev-packages]
 pykeepass = "*"
