--- a/Pipfile
+++ b/Pipfile
@@ -11,17 +11,14 @@ requests = "*"
 tabulate = "*"
 psutil = "*"
 ipwhois = "*"
-# joringels installs differ depending on system to install on
-# joringels = {git = "https://oauth2:glpat-PDn2Nftephd5_mGosn4x@gitlab.com/larsmielke2/joringels.git"}
-# joringels = {editable = true, path = "."}
-joringels = {path = "."}
-# logunittest installs differ depending on system to install on
-logunittest = {git = "https://oauth2:glpat-PDn2Nftephd5_mGosn4x@gitlab.com/larsmielke2/logunittest.git"}
-# logunittest = {editable = true, path = "/Users/Lars/python_venvs/packages/logunittest"}
+joringels = {editable = true, path = "."}
+logunittest = {editable = true, path = "/Users/Lars/python_venvs/packages/logunittest"}
 
 [dev-packages]
 pykeepass = "*"
+black = "*"
 pre-commit = "*"
+toml = "*"
 
 [requires]
 python_version = "3.9"
