--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ users/__pycache__/
 *.png
 *.jpg
 zz_rapit_proto.py
+test/data/safe_one.yml
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
