--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ requests = "*"
 tabulate = "*"
 psutil = "*"
 ipwhois = "*"
-joringels = {editable = true, path = "."}
+joringels = {path = "."}
 logunittest = {git = "https://oauth2:glpat-PDn2Nftephd5_mGosn4x@gitlab.com/larsmielke2/logunittest.git"}
 
 [dev-packages]
