Pipfile upgrade python 3.11 [all:22 ok:22 err:0]

--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ requests = "*"
 tabulate = "*"
 psutil = "*"
 ipwhois = "*"
-# context change in lut ut
+# context will change in lut ut before git add
 joringels = {path = "."}
 logunittest = {git = "https://oauth2:glpat-PDn2Nftephd5_mGosn4x@gitlab.com/larsmielke2/logunittest.git"}
 
