lut push with auto-comment [all:22 ok:22 err:0]

--- a/Pipfile
+++ b/Pipfile
@@ -23,3 +23,9 @@ toml = "*"
 
 [requires]
 python_version = "3.11"
+
+[pre-commit]
+requires_python_version = "3.11"
+
+[scripts]
+git_sync = "lut ut -g"
