--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ psutil = "*"
 ipwhois = "*"
 # context will change in lut ut before git add
 joringels = {path = "."}
-logunittest = {git = "https://oauth2:glpat-PDn2Nftephd5_mGosn4x@gitlab.com/larsmielke2/logunittest.git"}
+logunittest = {git = "https://${GIT_ACCESS_TOKEN}@gitlab.com/larsmielke2/logunittest.git"}
 
 [dev-packages]
 pykeepass = "*"
