logunittest error token not inserted due to ___ bug [all:22 ok:22 err:0]

--- a/Pipfile
+++ b/Pipfile
@@ -12,8 +12,8 @@ tabulate = "*"
 psutil = "*"
 ipwhois = "*"
 # context will change in lut ut before git add
-joringels = {editable = true, path = "."}
-logunittest = {editable = true, path = "/Users/Lars/python_venvs/packages/logunittest"}
+joringels = {path = "."}
+logunittest = {git = "https://${GIT_ACCESS_TOKEN}@gitlab.com/larsmielke2/logunittest.git"}
 
 [dev-packages]
 pykeepass = "*"
