--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = joringels
 include_package_data = True
-version = 0.1.1
+version = 0.2
 description = btn secrets manager to be used wisely
 long_description = file: README.md, CHANGELOG.md, LICENSE
 long_description_content_type = text/markdown
@@ -12,6 +12,7 @@ url = https://gitlab.com/larsmielke2/joringels
 [options]
 py_modules = joringels
 install_requires = 
+    logunittest
     colorama
     pyyaml
     pycryptodome
