docker run now mounting secrets [all:27 ok:27 err:0]

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu
 
 ARG DATASAFENAME
+ARG ENCRYPTDIR
 ARG GIT_ACCESS_TOKEN
 ARG PACKAGEDIR
 
@@ -20,9 +21,10 @@ RUN pip3 install --upgrade pip
 RUN pip3 install pipenv
 
 # package installs
-COPY ./$DATASAFENAME.json /root/.ssp/$DATASAFENAME.json
+# COPY ./$DATASAFENAME.json /root/.ssp/$DATASAFENAME.json
+RUN mkdir $ENCRYPTDIR
 COPY ./$Pipfile $PACKAGEDIR/$Pipfile
-RUN mkdir $PACKAGEDIR/.venv
+# RUN mkdir $PACKAGEDIR/.venv ; not allowed because logunittest creates .venv file during test
 WORKDIR $PACKAGEDIR
 RUN ls -la
 RUN pipenv install
